[project]
name = "comfy-registry-pr"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/drip-art/Comfy-Registry-PR"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfy-Registry-PR"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
